Changes to time tracking

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -54,7 +54,7 @@
 		<p><i class="icon-checkmark green"></i> Track how long it takes you to complete this task</p>
 		<ul class="content-list">
 			<li>[6] Monday: 7:30am - 11:30am; 2:30pm - 4:30pm; (Lessons in Angular4/Typescript, Initial Scaffolding)</li>
-			<li>[] Wednesday: 9:00am - 1:00pm; 2:00pm - 7:30pm; (Dashboard, EmployeeList, Http.Get, and RxJS implementation, initial push)</li>
+			<li>[13] Wednesday: 9:00am - 1:00pm; 2:00pm - 7:30pm; 8:00pm - 11:30pm (Dashboard, EmployeeList, Http.Get, and RxJS implementation, unit test, @Inputs, etc., initial push)</li>
 		</ul>
 
 	</li>
